--- a/01-bases/src/app/dbz/main-page/main-page.component.html
+++ b/01-bases/src/app/dbz/main-page/main-page.component.html
@@ -3,13 +3,9 @@
 
 <div class="row">
   <div class="col">
-    <h3>Personajes</h3>
-    <hr>
-    <ul>
-      <li>Krilin - 700</li>
-      <li>Goku - 15000</li>
-      <li>Vegueta - 8500</li>
-    </ul>
+    <app-personajes [data]="personajes">
+    </app-personajes>
+    
   </div>
 
   <div class="col">
@@ -29,7 +25,8 @@
       <input 
         type="number" 
         placeholder="Poder"
-        [value]="nuevo.poder"
+        name="nuevo.poder"
+        [(ngModel)] = "nuevo.poder"
       />
 
       <button type="submit">
